# AskLily

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.api  Dockerfile.web  README.md  compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: task-protocol.md
.github/workflows/: p0-governance.yml  p1-static.yml  p4-standalone.yml
apps/web/: index.html  package.json  vite.config.ts
connectors/zabbix/: .env.example
deploy/standalone/: .env.example  nginx.conf
docs/adr/: 0000-template.md  0001-public-repository-for-branch-protection.md  0002-single-maintainer-merge-approval.md  0003-zabbix-live-readonly-data-handling.md  README.md
docs/architecture/: P1-platform-contracts.md  P4-standalone-capacity-baseline.md
docs/capabilities/: CAP-OPTIC-HEALTH-brief.md  P3-ZABBIX-READONLY-brief.md  P4-STANDALONE-brief.md  optic-health.yaml  platform-foundation.yaml
docs/governance/: README.md  collaboration-policy.md  risk-change-review.md  task-status.md
docs/reports/: P0-stage-report.md  P1-stage-report.md  P2-stage-report.md  P3-stage-report.md  P4-completion-package.md  P4-stage-report.md
docs/runbooks/: P3-zabbix-l4-readonly-runbook.md  P4-standalone-operations.md
docs/templates/: README.md  capability-brief.md  capability-manifest.yaml  feature-completion-package.md
infra/ci/: check-p0-governance.sh
ops/standalone/: backup.sh  upgrade.sh  verify-assets.sh
tests/api/: test_platform_api.py
tests/connectors/: test_zabbix_readonly.py
tests/contracts/: test_platform_contracts.py
tests/domain/: test_optic_health.py
(+21 files in other folders)
